--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?115342351"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?405527129"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4203465362" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?536569328" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -451,14 +451,8 @@ background-color:#222222}
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
     </div>
     <div class="clearfix colelem" id="pu4608"><!-- group -->
-     <div class="pointer_cursor shadow museBGSize clearfix grpelem" id="u4608"><!-- group -->
-      <a class="block" target="_blank" href="https://www.iconfinder.com/iconsets/weather-colored-liner?ref=MilenaKiseleva"></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4619-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner" target="_blank"><!-- content --><p id="u4619-2">Weather colored liner</p></a>
-     </div>
-     <div class="pointer_cursor shadow museBGSize clearfix grpelem" id="u5025"><!-- group -->
-      <a class="block" target="_blank" href="https://www.iconfinder.com/iconsets/ice-cream-3?ref=MilenaKiseleva"></a>
-      <a class="nonblock nontext clearfix grpelem" id="u5026-4" href="https://www.iconfinder.com/iconsets/ice-cream-3" target="_blank"><!-- content --><p id="u5026-2">Ice Cream</p></a>
-     </div>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4608" href="https://www.iconfinder.com/iconsets/weather-colored-liner?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4619-4"><!-- content --><p id="u4619-2">Weather colored liner</p></div></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5025" href="https://www.iconfinder.com/iconsets/ice-cream-3?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u5026-4"><!-- content --><p id="u5026-2">Ice Cream</p></div></a>
     </div>
     <div class="clearfix colelem" id="u5168-4"><!-- content -->
      <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
