--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,8 +11,8 @@
   <title>Privacy Policy</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?490754995"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?3983960347"/>
-  <link rel="stylesheet" type="text/css" href="css/privacy-policy.css?377797222" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?3773083746"/>
+  <link rel="stylesheet" type="text/css" href="css/privacy-policy.css?4129098203" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -450,16 +450,17 @@ background-color:#222222}
    </div>
    <div class="clearfix grpelem" id="pu4273-4"><!-- group -->
     <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-    <div class="pointer_cursor rounded-corners Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+    <div class="pointer_cursor Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
      <a class="block" href="assets/milena_kiseleva.vcf"></a>
      <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
     </div>
    </div>
    <div class="verticalspacer"></div>
-   <div class="clearfix grpelem" id="u3093"><!-- group -->
-    <div class="clearfix grpelem" id="u3252-6"><!-- content -->
+   <div class="clearfix grpelem" id="u3093"><!-- column -->
+    <div class="clearfix colelem" id="u3252-6"><!-- content -->
      <p>© 2016 · milenakiseleva.github.io | Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-2">Arthur Gareginyan</span></a></p>
     </div>
+    <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u5246-4" href="privacy-policy.html"><!-- content --><p>Privacy Policy</p></a>
    </div>
    <div class="grpelem" id="u4305"><!-- custom html -->
     
