--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?115342351"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4004285034"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?3967482020" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4284006002" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -445,17 +445,17 @@ background-color:#222222}
     <div class="clearfix colelem" id="u3844-4"><!-- content -->
      <p>——————————————&nbsp;&nbsp; Icons&nbsp;&nbsp; ——————————————</p>
     </div>
-    <div class="clearfix colelem" id="pu3847"><!-- group -->
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3847" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4558-4"><!-- content --><p id="u4558-2">Liner Multimedia Buttons</p></div></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3850" href="https://www.iconfinder.com/iconsets/different-genders?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4561-4"><!-- content --><p id="u4561-2">Different genders</p></div></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
+    <div class="clearfix colelem" id="pu5379-4"><!-- group -->
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5379-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5379-2">Liner Multimedia Buttons</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5371-4" href="https://www.iconfinder.com/iconsets/different-genders?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5371-2">Different genders</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5363-4" href="https://www.iconfinder.com/iconsets/weather-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5363-2">Weather liner</p></a>
     </div>
-    <div class="clearfix colelem" id="pu4608"><!-- group -->
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4608" href="https://www.iconfinder.com/iconsets/weather-colored-liner?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4619-4"><!-- content --><p id="u4619-2">Weather colored liner</p></div></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5025" href="https://www.iconfinder.com/iconsets/ice-cream-3?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u5026-4"><!-- content --><p id="u5026-2">Ice Cream</p></div></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5249" href="https://www.iconfinder.com/iconsets/snowflakes-liner?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u5250-4"><!-- content --><p id="u5250-2">Snowflakes liner</p></div></a>
+    <div class="clearfix colelem" id="pu5355-4"><!-- group -->
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5355-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5355-2">Weather colored liner</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5347-4" href="https://www.iconfinder.com/iconsets/ice-cream-3?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5347-2">Ice Cream</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5339-4" href="https://www.iconfinder.com/iconsets/snowflakes-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5339-2">Snowflakes liner</p></a>
     </div>
-    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u5266" href="https://www.iconfinder.com/iconsets/snowflakes-coloured-liner?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u5267-4"><!-- content --><p id="u5267-2">Snowflakes Coloured Liner</p></div></a>
+    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u5318-4" href="https://www.iconfinder.com/iconsets/snowflakes-coloured-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5318-2">Snowflakes Coloured Liner</p></a>
     <div class="clearfix colelem" id="u5168-4"><!-- content -->
      <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
     </div>
