--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
   <title>PORTFOLIO</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?490754995"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?489924599"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4273045353" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?3962171064"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4013636274" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -458,6 +458,7 @@ background-color:#222222}
     <div class="clearfix colelem" id="pu5318-4"><!-- group -->
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5318-4" href="https://www.iconfinder.com/iconsets/snowflakes-coloured-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5318-2">Snowflakes Coloured Liner</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5387-4" href="https://www.iconfinder.com/iconsets/christmas-tree-ball-with-snowflakes?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5387-2">Christmas tree ball with snowflakes</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5398-4" href="https://www.iconfinder.com/iconsets/we-are-different-v2?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5398-2">We are different v2</p></a>
     </div>
     <div class="clearfix colelem" id="u5168-4"><!-- content -->
      <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
