--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,7 +11,7 @@
   <title>PORTFOLIO</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4175211591"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?3943758335"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?3962171064"/>
   <link rel="stylesheet" type="text/css" href="css/portfolio.css?4291376108" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -334,7 +334,7 @@ background-color:#222222}
      <div class="clearfix grpelem" id="ppu4273-4"><!-- column -->
       <div class="clearfix colelem" id="pu4273-4"><!-- group -->
        <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-       <div class="pointer_cursor Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+       <div class="pointer_cursor rounded-corners Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
         <a class="block" href="assets/milena_kiseleva.vcf"></a>
         <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
        </div>
@@ -446,7 +446,7 @@ background-color:#222222}
      <p>——————————————&nbsp;&nbsp; Icons&nbsp;&nbsp; ——————————————</p>
     </div>
     <div class="clearfix colelem" id="pu5379-4"><!-- group -->
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5379-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5379-2">Liner Multimedia Buttonsin Circle</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5379-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5379-2">Liner Multimedia Buttons in Circle</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5371-4" href="https://www.iconfinder.com/iconsets/different-genders?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5371-2">Different genders</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5363-4" href="https://www.iconfinder.com/iconsets/weather-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5363-2">Weather liner</p></a>
     </div>
