--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,8 +11,8 @@
   <title>PORTFOLIO</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4175211591"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?3962171064"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4291376108" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?436908208"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?136395919" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -334,7 +334,7 @@ background-color:#222222}
      <div class="clearfix grpelem" id="ppu4273-4"><!-- column -->
       <div class="clearfix colelem" id="pu4273-4"><!-- group -->
        <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-       <div class="pointer_cursor rounded-corners Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+       <div class="pointer_cursor Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
         <a class="block" href="assets/milena_kiseleva.vcf"></a>
         <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
        </div>
@@ -470,6 +470,11 @@ background-color:#222222}
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5461-4" href="https://www.iconfinder.com/iconsets/travel-69?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5461-2">Travel</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5464-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons-1?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5464-2">Liner Multimedia Buttons</p></a>
     </div>
+    <div class="clearfix colelem" id="pu5483-4"><!-- group -->
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5483-4" href="https://www.iconfinder.com/iconsets/leafs?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5483-2">Autumn Leafs</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5486-4" href="https://www.iconfinder.com/iconsets/leafs-1?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5486-2">Leafs</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5489-4" href="https://www.iconfinder.com/iconsets/leafs-black-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5489-2">Leafs Black Liner</p></a>
+    </div>
     <div class="clearfix colelem" id="u5168-4"><!-- content -->
      <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
     </div>
@@ -550,7 +555,7 @@ background-color:#222222}
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
