--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,8 +11,8 @@
   <title>Privacy Policy</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4175211591"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?3943758335"/>
-  <link rel="stylesheet" type="text/css" href="css/privacy-policy.css?512468044" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?436908208"/>
+  <link rel="stylesheet" type="text/css" href="css/privacy-policy.css?4069262877" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -492,7 +492,7 @@ background-color:#222222}
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
