--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,8 +11,8 @@
   <title>PORTFOLIO</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4175211591"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?436908208"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?136395919" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?3962171064"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?131872141" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -334,7 +334,7 @@ background-color:#222222}
      <div class="clearfix grpelem" id="ppu4273-4"><!-- column -->
       <div class="clearfix colelem" id="pu4273-4"><!-- group -->
        <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-       <div class="pointer_cursor Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+       <div class="pointer_cursor rounded-corners Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
         <a class="block" href="assets/milena_kiseleva.vcf"></a>
         <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
        </div>
@@ -475,6 +475,7 @@ background-color:#222222}
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5486-4" href="https://www.iconfinder.com/iconsets/leafs-1?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5486-2">Leafs</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5489-4" href="https://www.iconfinder.com/iconsets/leafs-black-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5489-2">Leafs Black Liner</p></a>
     </div>
+    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u5516-4" href="https://www.iconfinder.com/iconsets/social-life?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5516-2">Social Life</p></a>
     <div class="clearfix colelem" id="u5168-4"><!-- content -->
      <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
     </div>
@@ -495,7 +496,10 @@ background-color:#222222}
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu5204"><!-- group -->
+    <div class="clearfix colelem" id="pu5106-3"><!-- group -->
+     <div class="clearfix grpelem" id="u5106-3"><!-- content -->
+      <p>&nbsp;</p>
+     </div>
      <div class="shadow museBGSize clearfix grpelem" id="u5204"><!-- group -->
       <div class="clearfix grpelem" id="u5205-4"><!-- content -->
        <p id="u5205-2">Medal</p>
@@ -511,9 +515,6 @@ background-color:#222222}
        <p id="u5217-2">Medal-2</p>
       </div>
      </div>
-    </div>
-    <div class="clearfix colelem" id="u5106-3"><!-- content -->
-     <p>&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="pu3093"><!-- group -->
