--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
   <title>PORTFOLIO</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4175211591"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?3962171064"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?131872141" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?489924599"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?438552748" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -467,15 +467,18 @@ background-color:#222222}
     </div>
     <div class="clearfix colelem" id="pu5450-4"><!-- group -->
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5450-4" href="https://www.iconfinder.com/iconsets/easter-eggs-v2-1?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5450-2">Easter Eggs v2</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5527-4" href="https://www.iconfinder.com/iconsets/birthday-5?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5527-2">Birthday</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5461-4" href="https://www.iconfinder.com/iconsets/travel-69?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5461-2">Travel</p></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5464-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons-1?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5464-2">Liner Multimedia Buttons</p></a>
     </div>
     <div class="clearfix colelem" id="pu5483-4"><!-- group -->
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5483-4" href="https://www.iconfinder.com/iconsets/leafs?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5483-2">Autumn Leafs</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5486-4" href="https://www.iconfinder.com/iconsets/leafs-1?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5486-2">Leafs</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5489-4" href="https://www.iconfinder.com/iconsets/leafs-black-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5489-2">Leafs Black Liner</p></a>
     </div>
-    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u5516-4" href="https://www.iconfinder.com/iconsets/social-life?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5516-2">Social Life</p></a>
+    <div class="clearfix colelem" id="pu5516-4"><!-- group -->
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5516-4" href="https://www.iconfinder.com/iconsets/social-life?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5516-2">Social Life</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5464-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons-1?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5464-2">Liner Multimedia Buttons</p></a>
+    </div>
     <div class="clearfix colelem" id="u5168-4"><!-- content -->
      <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
     </div>
