The 451 page added. Some private information removed.

--- a/resume.html
+++ b/resume.html
@@ -11,11 +11,11 @@
   <title>RESUME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4175211591"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?436908208"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?3839292596" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?528144868"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?4128717185" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?267348086"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?484399037"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -30,16 +30,7 @@ var __adobewebfontsappname__ = "muse";
   <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
   <![endif]-->
     <!--custom head HTML-->
-  <meta name="google-site-verification" content="yvTrq0gQfgmboXjJKrrLX9tOh-EkN_ECRm2_IEYmBe8" />
-<link rel='author' href='https://plus.google.com/+MilenaKiseleva/'>
-<meta name='article:publisher' content='https://www.facebook.com/milenarussianprincess' />
-<meta name='twitter:site' content='@milavakiseleva' />
-<meta name='twitter:creator' content='@milavakiseleva' />
-<meta name='author' content='Milena Kiseleva' />
-<meta name='designer' content='Milena Kiseleva' />
-<meta name='contact' content='milavakiseleva@gmail.com' />
-<meta name='copyright' content='Copyright (c) 2016 Milena Kiseleva. All Rights Reserved.' />
-<meta name='keywords' content='Milena Kiseleva, Milena Russian Princess, Милена Киселёва, Киселёва Милена,' />
+  <meta name="google-site-verification" content="yvTrq0gQfgmboXjJKrrLX9tOh-EkN_ECRm2_IEYmBe8" /><link rel='author' href='https://plus.google.com/+MilenaKiseleva/'><meta name='article:publisher' content='https://www.facebook.com/milenarussianprincess' /><meta name='twitter:site' content='@milavakiseleva' /><meta name='twitter:creator' content='@milavakiseleva' /><meta name='author' content='Milena Kiseleva' /><meta name='designer' content='Milena Kiseleva' /><meta name='copyright' content='Copyright (c) 2016 Milena Kiseleva. All Rights Reserved.' /><meta name='keywords' content='Milena Kiseleva, Милена Киселёва, Киселёва Милена' />
   <!--HTML Widget code-->
   
        <style>
@@ -471,11 +462,6 @@ background-color:#222222}
 			<img src="//milenakiseleva.github.io/social-media-icons/github.png" alt="Github" />
 		</a>
 	</li>
-	<li>
-		<a href="mailto:milavakiseleva@gmail.com?subject=Message from milenakiseleva.github.io" title="Mail" target='blank'>
-			<img src="//milenakiseleva.github.io/social-media-icons/email.png" alt="Mail" />
-		</a>
-	</li>
 </ul>
 <style>
 .social-icons {
@@ -514,18 +500,10 @@ background-color:#222222}
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu4273-4"><!-- group -->
-    <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-    <div class="pointer_cursor Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
-     <a class="block" href="assets/milena_kiseleva.vcf"></a>
-     <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
-    </div>
-   </div>
    <div class="verticalspacer"></div>
    <div class="clearfix grpelem" id="u3093"><!-- column -->
-    <div class="clearfix colelem" id="u3252-8"><!-- content -->
-     <p>© 2016 - 2017 · milenakiseleva.github.io</p>
-     <p>Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-4">Arthur Gareginyan</span></a></p>
+    <div class="clearfix colelem" id="u3252-4"><!-- content -->
+     <p>© 2016 - 2017&nbsp; ·&nbsp; Milena Kiseleva. All rights reserved.</p>
     </div>
     <a class="nonblock nontext clearfix colelem" id="u5246-4" href="privacy-policy.html"><!-- content --><p>Privacy Policy</p></a>
    </div>
