--- a/about-me.html
+++ b/about-me.html
@@ -11,8 +11,8 @@
   <title>ABOUT ME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4175211591"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?436908208"/>
-  <link rel="stylesheet" type="text/css" href="css/about-me.css?4184283815" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?528144868"/>
+  <link rel="stylesheet" type="text/css" href="css/about-me.css?465041850" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -26,16 +26,7 @@ var __adobewebfontsappname__ = "muse";
   <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
   <![endif]-->
     <!--custom head HTML-->
-  <meta name="google-site-verification" content="yvTrq0gQfgmboXjJKrrLX9tOh-EkN_ECRm2_IEYmBe8" />
-<link rel='author' href='https://plus.google.com/+MilenaKiseleva/'>
-<meta name='article:publisher' content='https://www.facebook.com/milenarussianprincess' />
-<meta name='twitter:site' content='@milavakiseleva' />
-<meta name='twitter:creator' content='@milavakiseleva' />
-<meta name='author' content='Milena Kiseleva' />
-<meta name='designer' content='Milena Kiseleva' />
-<meta name='contact' content='milavakiseleva@gmail.com' />
-<meta name='copyright' content='Copyright (c) 2016 Milena Kiseleva. All Rights Reserved.' />
-<meta name='keywords' content='Milena Kiseleva, Milena Russian Princess, Милена Киселёва, Киселёва Милена,' />
+  <meta name="google-site-verification" content="yvTrq0gQfgmboXjJKrrLX9tOh-EkN_ECRm2_IEYmBe8" /><link rel='author' href='https://plus.google.com/+MilenaKiseleva/'><meta name='article:publisher' content='https://www.facebook.com/milenarussianprincess' /><meta name='twitter:site' content='@milavakiseleva' /><meta name='twitter:creator' content='@milavakiseleva' /><meta name='author' content='Milena Kiseleva' /><meta name='designer' content='Milena Kiseleva' /><meta name='copyright' content='Copyright (c) 2016 Milena Kiseleva. All Rights Reserved.' /><meta name='keywords' content='Milena Kiseleva, Милена Киселёва, Киселёва Милена' />
   <!--HTML Widget code-->
   
        <style>
@@ -344,13 +335,7 @@ background-color:#222222}
         <div class="clearfix colelem" id="pu3392"><!-- group -->
          <div class="grpelem" id="u3392"><!-- simple frame --></div>
          <div class="clearfix grpelem" id="u3398-6"><!-- content -->
-          <p><span id="u3398">Address:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u3398-3">Moscow, Russia 141033</span></p>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="pu3393"><!-- group -->
-         <div class="grpelem" id="u3393"><!-- simple frame --></div>
-         <div class="clearfix grpelem" id="u3399-7"><!-- content -->
-          <p><span id="u3399">Email:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class="nonblock" href="mailto:milavakiseleva@gmail.com"><span class="Pink-Link" id="u3399-3">milavakiseleva@gmail.com</span></a></p>
+          <p><span id="u3398">Address:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u3398-3">Moscow, Russia</span></p>
          </div>
         </div>
         <div class="clearfix colelem" id="pu3394"><!-- group -->
@@ -414,11 +399,6 @@ background-color:#222222}
 			<img src="//milenakiseleva.github.io/social-media-icons/github.png" alt="Github" />
 		</a>
 	</li>
-	<li>
-		<a href="mailto:milavakiseleva@gmail.com?subject=Message from milenakiseleva.github.io" title="Mail" target='blank'>
-			<img src="//milenakiseleva.github.io/social-media-icons/email.png" alt="Mail" />
-		</a>
-	</li>
 </ul>
 <style>
 .social-icons {
@@ -457,18 +437,10 @@ background-color:#222222}
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu4273-4"><!-- group -->
-    <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-    <div class="pointer_cursor Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
-     <a class="block" href="assets/milena_kiseleva.vcf"></a>
-     <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
-    </div>
-   </div>
    <div class="verticalspacer"></div>
    <div class="clearfix grpelem" id="u3093"><!-- column -->
-    <div class="clearfix colelem" id="u3252-8"><!-- content -->
-     <p>© 2016 - 2017 · milenakiseleva.github.io</p>
-     <p>Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-4">Arthur Gareginyan</span></a></p>
+    <div class="clearfix colelem" id="u3252-4"><!-- content -->
+     <p>© 2016 - 2017&nbsp; ·&nbsp; Milena Kiseleva. All rights reserved.</p>
     </div>
     <a class="nonblock nontext clearfix colelem" id="u5246-4" href="privacy-policy.html"><!-- content --><p>Privacy Policy</p></a>
    </div>
