--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -455,7 +455,7 @@ background-color:#222222}
     <div class="clearfix colelem" id="pu5489-4"><!-- group -->
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5489-4" href="https://www.iconfinder.com/iconsets/leafs-black-liner?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5489-2">Leafs Black Liner</p></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5516-4" href="https://www.iconfinder.com/iconsets/social-life?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5516-2">Social Life</p></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5633-4" href="https://www.iconfinder.com/iconsets/social-life?ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5633-2">Green Energy</p></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5633-4" href="https://www.iconfinder.com/iconsets/green-energy-9?utm_source=moderation-process&amp;utm_medium=email&amp;utm_content=share-on-social-media&amp;utm_campaign=Moderation%20process&amp;ref=MilenaKiseleva" target="_blank"><!-- content --><p id="u5633-2">Green Energy</p></a>
     </div>
     <div class="clearfix colelem" id="u5168-4"><!-- content -->
      <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
