HTML code has been beautified

--- a/donate.html
+++ b/donate.html
@@ -394,8 +394,7 @@
                         <p id="u1225-2"><span id="u1225">If you appreciate something I made, you can buy me a coffee!</span>
                         </p>
                         <p id="u1225-3">&nbsp;</p>
-                        <p id="u1225-5">I spend a lot of time trying to make sure that the things I build are useful, and the ultimate proof of that for me is that you actually want to use them. But, I’m an independent designer, without a regular income, so every little
-                            contribution helps cover my costs and lets me spend more time building things for people like you to enjoy.</p>
+                        <p id="u1225-5">I spend a lot of time trying to make sure that the things I build are useful, and the ultimate proof of that for me is that you actually want to use them. But, I’m an independent designer, without a regular income, so every little contribution helps cover my costs and lets me spend more time building things for people like you to enjoy.</p>
                         <p id="u1225-6">&nbsp;</p>
                         <p>&nbsp;</p>
                         <p><span id="u1225-8">PayPal address:</span> <a class="nonblock" href="https://www.paypal.me/milenak" target="_blank"><span class="Pink-Link" id="u1225-10">www.paypal.me/milenak</span></a>
