--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -406,8 +406,7 @@
                         <p id="u1250-4">&nbsp;</p>
                         <p id="u1250-6">Collection of Routine Information</p>
                         <p id="u1250-7">&nbsp;</p>
-                        <p id="u1250-9">This website track basic information about their visitors. This information includes, but is not limited to, IP addresses, browser details, timestamps and referring pages. None of this information can personally identify specific
-                            visitors to this website. The information is tracked for routine administration and maintenance purposes.</p>
+                        <p id="u1250-9">This website track basic information about their visitors. This information includes, but is not limited to, IP addresses, browser details, timestamps and referring pages. None of this information can personally identify specific visitors to this website. The information is tracked for routine administration and maintenance purposes.</p>
                         <p id="u1250-10">&nbsp;</p>
                         <p id="u1250-11">&nbsp;</p>
                         <p id="u1250-13">Cookies</p>
@@ -417,9 +416,7 @@
                         <p id="u1250-18">&nbsp;</p>
                         <p id="u1250-20">Advertisement and Other Third Parties</p>
                         <p id="u1250-21">&nbsp;</p>
-                        <p id="u1250-26">Advertising partners and other third parties may use cookies, scripts and/or web beacons to track visitors activities on this website in order to display advertisements and other useful information. Such tracking is done directly
-                            by the third parties through their own servers and is subject to their own privacy policies. This website has no access or control over these cookies, scripts and/or web beacons that may be used by third parties. Learn how
-                            to <a class="nonblock" href="http://www.google.com/privacy_ads.html" target="_blank"><span id="u1250-23">opt out of Google’s cookie usage</span></a>.</p>
+                        <p id="u1250-26">Advertising partners and other third parties may use cookies, scripts and/or web beacons to track visitors activities on this website in order to display advertisements and other useful information. Such tracking is done directly by the third parties through their own servers and is subject to their own privacy policies. This website has no access or control over these cookies, scripts and/or web beacons that may be used by third parties. Learn how to <a class="nonblock" href="http://www.google.com/privacy_ads.html" target="_blank"><span id="u1250-23">opt out of Google’s cookie usage</span></a>.</p>
                         <p id="u1250-27">&nbsp;</p>
                         <p id="u1250-28">&nbsp;</p>
                         <p id="u1250-30">Links to Third Party Websites</p>
@@ -429,16 +426,14 @@
                         <p id="u1250-35">&nbsp;</p>
                         <p id="u1250-37">Security</p>
                         <p id="u1250-38">&nbsp;</p>
-                        <p id="u1250-40">The security of your personal information is important to me, but remember that no method of transmission over the Internet, or method of electronic storage, is 100% secure. While I strive to use commercially acceptable means to
-                            protect your personal information, I cannot guarantee its absolute security.</p>
+                        <p id="u1250-40">The security of your personal information is important to me, but remember that no method of transmission over the Internet, or method of electronic storage, is 100% secure. While I strive to use commercially acceptable means to protect your personal information, I cannot guarantee its absolute security.</p>
                         <p id="u1250-41">&nbsp;</p>
                         <p id="u1250-42">&nbsp;</p>
                         <p id="u1250-44">Changes To This Privacy Policy</p>
                         <p id="u1250-45">&nbsp;</p>
                         <p id="u1250-47">This Privacy Policy is effective as of 17.09.2016 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.</p>
                         <p id="u1250-48">&nbsp;</p>
-                        <p id="u1250-50">I reserve the right to update or change my Privacy Policy at any time and you should check this Privacy Policy periodically. If I make any material changes to this Privacy Policy, I will notify you either through the email address
-                            you have provided me, or by placing a prominent notice on my website.</p>
+                        <p id="u1250-50">I reserve the right to update or change my Privacy Policy at any time and you should check this Privacy Policy periodically. If I make any material changes to this Privacy Policy, I will notify you either through the email address you have provided me, or by placing a prominent notice on my website.</p>
                         <p id="u1250-51">&nbsp;</p>
                         <p id="u1250-52">&nbsp;</p>
                         <p id="u1250-54">Contact Information</p>
