Content edit: URL's corrected

--- a/portfolio.html
+++ b/portfolio.html
@@ -439,42 +439,42 @@
                     <ul class="social-icons">
                         <li>
                             <a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/facebook.png" alt="Facebook">
+                                <img src="https://milenakiseleva.com/social-media-icons/facebook.png" alt="Facebook">
                             </a>
                         </li>
                         <li>
                             <a href="https://twitter.com/@milavakiseleva" title="Twitter" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/twitter.png" alt="Twitter">
+                                <img src="https://milenakiseleva.com/social-media-icons/twitter.png" alt="Twitter">
                             </a>
                         </li>
                         <li>
                             <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/instagram.png" alt="Instagram">
+                                <img src="https://milenakiseleva.com/social-media-icons/instagram.png" alt="Instagram">
                             </a>
                         </li>
                         <li>
                             <a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/google-plus.png" alt="Google+">
+                                <img src="https://milenakiseleva.com/social-media-icons/google-plus.png" alt="Google+">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/youtube.png" alt="YouTube">
+                                <img src="https://milenakiseleva.com/social-media-icons/youtube.png" alt="YouTube">
                             </a>
                         </li>
                         <li>
                             <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/blogger.png" alt="Blogger">
+                                <img src="https://milenakiseleva.com/social-media-icons/blogger.png" alt="Blogger">
                             </a>
                         </li>
                         <li>
                             <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/linkedin.png" alt="Linkedin">
+                                <img src="https://milenakiseleva.com/social-media-icons/linkedin.png" alt="Linkedin">
                             </a>
                         </li>
                         <li>
                             <a href="https://github.com/MilenaKiseleva" title="Github" target="blank">
-                                <img src="//milenakiseleva.github.io/social-media-icons/github.png" alt="Github">
+                                <img src="https://milenakiseleva.com/social-media-icons/github.png" alt="Github">
                             </a>
                         </li>
                     </ul>
